Bug 1062514 - Fix range handling for regular MP4 with b-frames. r=rillian, a=lmandel